--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog - JOB_01</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="web icon" type="png" href="images/icon.png">
+
   </head>
   <body>
     <header>
