--- a/jobs.html
+++ b/jobs.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jobs - JOB_01</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="web icon" type="png" href="images/icon.png">
-
+    <link rel="web icon" type="png" href="images/icon.png" />
   </head>
   <body>
     <header>
@@ -45,22 +44,28 @@
       </form>
       <div class="job-list">
         <div class="job-item">
-          <h3>Software Engineer</h3>
-          <p>Company: Tech Corp</p>
-          <p>Location: Remote</p>
+          <h3>Product Manager</h3>
+          <p>Company: Innovate Inc.</p>
+          <p>Location: San Francisco</p>
+          <p>exp: 0 - 1 year</p>
+          <p>salary: 3LPA - 5LPA</p>
           <button>Apply Now</button>
         </div>
         <div class="job-item">
           <h3>Product Manager</h3>
           <p>Company: Innovate Inc.</p>
           <p>Location: San Francisco</p>
+          <p>exp: 0 - 1 year</p>
+          <p>salary: 3LPA - 5LPA</p>
           <button>Apply Now</button>
         </div>
         <div class="job-item">
-          <h3>Data Scientist</h3>
-          <p>Company: DataWorks</p>
-          <p>Location: New York</p>
-          <button>Apply Now</button>
+          <h3>Manager</h3>
+          <p>Company: Innovate Inc.</p>
+          <p>Location: San Francisco</p>
+          <p>exp: 0 - 1 year</p>
+          <p>salary: 13LPA - 50LPA</p>
+          <button >Apply Now </button>
         </div>
       </div>
     </section>
