--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
         <input type="password" id="password" name="password" required />
         <small>
           <span> already account SignIn </span
-          ><a href="/signin.html">here</a></small
+          ><a href="signin.html">here</a></small
         >
         <button type="submit">Sign Up</button>
       </form>
