user profile update

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
         <p>&copy; 2025 JOB_01. All rights reserved.</p>
       </div>
     </footer>
-
+    <script src="shared.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
