--- a/signin.html
+++ b/signin.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In - JOB_01</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="web icon" type="png" href="images/icon.png">
-
+    <link rel="web icon" type="png" href="images/icon.png" />
   </head>
   <body>
     <header>
@@ -73,6 +72,7 @@
       </div>
     </footer>
 
+    <script src="shared.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
