--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Portal - JOB_01</title>
+    <title>HireWorld</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="web icon" type="png" href="images/icon.png">
   </head>
   <body>
     <header>
-      <div class="logo">JOB_01</div>
+      <div class="logo">HireWorld</div>
+
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="jobs.html">Jobs</a></li>
-          <li><a href="post-job.html">Post Job</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
 
@@ -28,7 +28,6 @@
       <h1>Find Your Dream Job</h1>
       <p>Join thousands of employers and job seekers.</p>
       <button onclick="window.location.href='jobs.html'">Find Jobs</button>
-      <button onclick="window.location.href='post-job.html'">Post a Job</button>
     </section>
 
     <section class="cta">
@@ -62,14 +61,13 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="jobs.html">Jobs</a></li>
-            <li><a href="post-job.html">Post Job</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h3>Contact Us</h3>
-          <p>Email: support@job01.com</p>
+          <p>Email: iamasgar19@gmail.com</p>
           <p>Phone: +91 91714 24***</p>
           <p>Address: 123 Job Street, Tech City, India</p>
         </div>
@@ -84,11 +82,12 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 JOB_01. All rights reserved.</p>
+        <p>&copy; 2025 HireWorld. All rights reserved.</p>
       </div>
     </footer>
 
     <script src="shared.js"></script>
     <script src="script.js"></script>
+    
   </body>
 </html>
