--- a/jobs.html
+++ b/jobs.html
@@ -3,21 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jobs - JOB_01</title>
+    <title>Job Listings</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="web icon" type="png" href="images/icon.png" />
+    <link rel="icon" type="image/png" href="images/icon.png" />
   </head>
   <body>
     <header>
-      <div class="logo">JOB_01</div>
+      <div class="logo">HireWorld</div>
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="jobs.html">Jobs</a></li>
-          <li><a href="post-job.html">Post Job</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
-
           <li><a href="signup.html">Sign Up</a></li>
         </ul>
         <div class="menu-icon" id="menu-icon">&#9776;</div>
@@ -26,47 +24,24 @@
 
     <section class="jobs">
       <h1>Job Listings</h1>
-      <form>
+      <form id="search-form">
         <input
           type="search"
           id="search"
           name="search"
-          placeholder="Search job here..."
-          required
+          placeholder="Search by job title..."
         />
         <input
           type="text"
           id="location"
           name="location"
-          placeholder="enter city name"
+          placeholder="Enter city name (optional)"
         />
         <button type="submit">Search</button>
       </form>
-      <div class="job-list">
-        <div class="job-item">
-          <h3>Product Manager</h3>
-          <p>Company: Innovate Inc.</p>
-          <p>Location: San Francisco</p>
-          <p>exp: 0 - 1 year</p>
-          <p>salary: 3LPA - 5LPA</p>
-          <button>Apply Now</button>
-        </div>
-        <div class="job-item">
-          <h3>Product Manager</h3>
-          <p>Company: Innovate Inc.</p>
-          <p>Location: San Francisco</p>
-          <p>exp: 0 - 1 year</p>
-          <p>salary: 3LPA - 5LPA</p>
-          <button>Apply Now</button>
-        </div>
-        <div class="job-item">
-          <h3>Manager</h3>
-          <p>Company: Innovate Inc.</p>
-          <p>Location: San Francisco</p>
-          <p>exp: 0 - 1 year</p>
-          <p>salary: 13LPA - 50LPA</p>
-          <button >Apply Now </button>
-        </div>
+
+      <div class="job-list" id="job-list">
+        <!-- Job items will be injected here dynamically by job.js -->
       </div>
     </section>
 
@@ -77,14 +52,13 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="jobs.html">Jobs</a></li>
-            <li><a href="post-job.html">Post Job</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h3>Contact Us</h3>
-          <p>Email: support@job01.com</p>
+          <p>Email: iamasgar19@gmail.com</p>
           <p>Phone: +91 91714 24***</p>
           <p>Address: 123 Job Street, Tech City, India</p>
         </div>
@@ -99,11 +73,11 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 JOB_01. All rights reserved.</p>
+        <p>&copy; 2025 HireWorld. All rights reserved.</p>
       </div>
     </footer>
-
     <script src="shared.js"></script>
     <script src="script.js"></script>
+    <script type="module" src="job.js"></script>
   </body>
 </html>
