--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile - JOB_01</title>
+    <title>Profile - HireWorld</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="web icon" type="png" href="images/icon.png" />
     <link
@@ -13,12 +13,11 @@
   </head>
   <body>
     <header>
-      <div class="logo">JOB_01</div>
+      <div class="logo">HireWorld</div>
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="jobs.html">Jobs</a></li>
-          <li><a href="post-job.html">Post Job</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -41,11 +40,6 @@
           </div>
           <div class="profile-info">
             <p id="profile-email">Email</p>
-            <p><strong>Joined:</strong> <span id="profile-joined"></span></p>
-            <p>
-              <strong>Bio:</strong>
-              <span id="profile-bio">No bio available.</span>
-            </p>
           </div>
           <button class="logout-button" onclick="logout()">Logout</button>
         </div>
@@ -59,14 +53,13 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="jobs.html">Jobs</a></li>
-            <li><a href="post-job.html">Post Job</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h3>Contact Us</h3>
-          <p>Email: support@job01.com</p>
+          <p>Email: iamasgar19@gmail.com</p>
           <p>Phone: +91 91714 24***</p>
           <p>Address: 123 Job Street, Tech City, India</p>
         </div>
@@ -81,7 +74,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 JOB_01. All rights reserved.</p>
+        <p>&copy; 2025 HireWorld. All rights reserved.</p>
       </div>
     </footer>
 
@@ -107,7 +100,6 @@
         window.location.href = "index.html";
       }
     </script>
-
     <script src="shared.js"></script>
     <script src="script.js"></script>
   </body>
