--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - HireWorld</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="web icon" type="png" href="images/icon.png">
+    <link rel="web icon" type="png" href="images/webicon.png" />
+
 
   </head>
   <body>
@@ -13,7 +14,7 @@
       <div class="logo">HireWorld</div>
       <nav>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="jobs.html">Jobs</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -45,7 +46,7 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="jobs.html">Jobs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -60,10 +61,16 @@
         <div class="footer-section">
           <h3>Follow Us</h3>
           <ul class="social-links">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Instagram</a></li>
+            <li>
+              <a href="https://www.facebook.com/iasgaransari/">Facebook</a>
+            </li>
+            <li><a href="https://github.com/asgardev119">Github</a></li>
+            <li>
+              <a href="https://www.linkedin.com/in/asgar-ansari/">LinkedIn</a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/iasgaransarii">Instagram</a>
+            </li>
           </ul>
         </div>
       </div>
