--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard - Job Posting</title>
-    <link rel="stylesheet" href="admin.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="web icon" type="png" href="../images/webicon.png" />
   </head>
   <body>
